Initial deploy of aperio.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Ignore bundler config.
 /.bundle
+/vendor/bundle
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
@@ -9,5 +10,8 @@
 /log/*.log
 /tmp
 
-chef-repo/.kitchen/
 .kitchen/
+chef-repo/.kitchen/
+
+chef-repo/.chef/secrets
+config/secrets.yml
